[package]
name = "apoc_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[dependencies]
reqwest = { version = "0.11.26", features = ["blocking", "stream"] }
once_cell = "1.19.0"
anyhow = "1.0.81"
regex = "1.10.3"

